<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16dp"
    android:background="@drawable/shape_thong_tin"
    android:padding="@dimen/_16dp">

    <TextView
        android:id="@+id/tvHistoryBuyContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mua_sam"
        android:textColor="@color/xam"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvThreedots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvThreedots" />


    <FrameLayout
        android:id="@+id/tvThreedots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/there_dots"
            android:textColor="@color/color_fd3665"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvHistoryBuy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34dp"
        android:justificationMode="inter_word"
        android:text="@string/mua_do_an"
        android:textColor="@color/xam"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:text="02:58 Chiều 17/02/2025"
        android:textColor="@color/color_009CDF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryBuy1" />

    <TextView
        android:id="@+id/tvspend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/chi"
        android:textColor="@color/xam"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/_25_000"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvspend" />
</androidx.constraintlayout.widget.ConstraintLayout>